Fix content block vertical alignment

--- a/content/themes/foxy-panda/assets/sass/partials/_content.sass
+++ b/content/themes/foxy-panda/assets/sass/partials/_content.sass
@@ -11,6 +11,7 @@
   &-bar
     &-block
       display: inline-block
+      vertical-align: top
       padding: $cell / 2
 
   h1, h2, h3, h4, h5, h6
